[tool.poetry]
name = "qiita_analysis"
version = "0.1.0"
description = ""
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
networkx = "^2.5"
ginza = "^4.0.5"
matplotlib = "^3.3.2"
scikit-learn = "^0.23.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.7"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
